--- a/package.json
+++ b/package.json
@@ -8,5 +8,10 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.21.1",
+    "inquirer": "^8.2.4",
+    "pg": "^8.13.0"
+  }
 }
